Updated TS examples.

--- a/layouts/partials/doc/connect_token_url.html
+++ b/layouts/partials/doc/connect_token_url.html
@@ -62,7 +62,7 @@ await nc.connect(servers=[&#34;nats://mytoken@demo.nats.io:4222&#34;])
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_token_url-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/auth_examples.ts#L48-51"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let url = `nats://:s3cretT0ken!@127.0.0.1:${port}`;
+		<pre class="tab-pane fade" id="connect_token_url-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/auth_examples.ts#L47-50"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let url = `nats://:mytoken!@127.0.0.1:${port}`;
 let nc = await connect({url: url});
 </code></pre>
 		
