--- a/layouts/partials/doc/publish_bytes.html
+++ b/layouts/partials/doc/publish_bytes.html
@@ -72,7 +72,7 @@ await nc.publish(&#34;updates&#34;, b&#39;All is Well&#39;)
 });
 
 let buf = Buffer.allocUnsafe(12);
-buf.fill(&#34;Hello world!&#34;);
+buf.fill(&#34;All is Well&#34;);
 nc.publish(&#39;updates&#39;, buf);
 </code></pre>
 		
