--- a/layouts/partials/doc/publish_json.html
+++ b/layouts/partials/doc/publish_json.html
@@ -107,7 +107,7 @@ await nc.publish(&#34;updates&#34;, json.dumps({&#34;symbol&#34;: &#34;GOOG&#34;
     payload: Payload.JSON
 });
 
-nc.publish(&#39;updates&#39;, {ticker: &#39;TSLA&#39;, price: 355.49});
+nc.publish(&#39;updates&#39;, {ticker: &#39;GOOG&#39;, price: 1200});
 </code></pre>
 		
 	
