--- a/layouts/partials/doc/connect_name.html
+++ b/layouts/partials/doc/connect_name.html
@@ -66,10 +66,10 @@ await nc.connect(servers=[&#34;nats://demo.nats.io:4222&#34;], name=&#34;my-conn
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_name-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/options_samples.ts#L76-84"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
+		<pre class="tab-pane fade" id="connect_name-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/options_samples.ts#L55-63"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// will throw an exception if connection fails
 let nc = await connect({
     url: &#34;nats://demo.nats.io:4222&#34;,
-    name: &#34;memyselfandi&#34;
+    name: &#34;my-connection&#34;
 });
 
 nc.close();
