--- a/layouts/partials/doc/connect_userpass.html
+++ b/layouts/partials/doc/connect_userpass.html
@@ -66,7 +66,7 @@ await nc.connect(servers=[&#34;nats://myname:password@demo.nats.io:4222&#34;])
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_userpass-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/auth_examples.ts#L22-24"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = await connect({url: server.nats, user: &#34;me&#34;, pass: &#34;t0P-s3cr3t&#34;});
+		<pre class="tab-pane fade" id="connect_userpass-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/auth_examples.ts#L21-23"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = await connect({url: server.nats, user: &#34;myname&#34;, pass: &#34;password&#34;});
 </code></pre>
 		
 	
