--- a/layouts/partials/doc/connect_userpass_url.html
+++ b/layouts/partials/doc/connect_userpass_url.html
@@ -68,13 +68,13 @@ await nc.connect(servers=[&#34;nats://myname:password@demo.nats.io:4222&#34;])
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_userpass_url-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/auth_examples.ts#L35-38"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let url = `nats://me:t0P-s3cr3t@127.0.0.1:${port}`;
+		<pre class="tab-pane fade" id="connect_userpass_url-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/auth_examples.ts#L34-37"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let url = `nats://myname:password@127.0.0.1:${port}`;
 let nc = await connect({url: url});
 </code></pre>
 		
 	
 		
-		<pre class="tab-pane fade" id="connect_userpass_url-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/auth_examples.ts#L59-61"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = await connect({url: server.nats, token: &#34;s3cretT0ken&#34;});
+		<pre class="tab-pane fade" id="connect_userpass_url-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/auth_examples.ts#L58-60"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">let nc = await connect({url: server.nats, token: &#34;mytoken&#34;});
 </code></pre>
 		
 	
