--- a/layouts/partials/doc/publish_with_reply.html
+++ b/layouts/partials/doc/publish_with_reply.html
@@ -111,14 +111,26 @@ print(&#34;Reply:&#34;, msg)
 		
 	
 		
-		<pre class="tab-pane fade" id="publish_with_reply-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/publisher_samples.ts#L54-65"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// create a subscription subject that the responding send replies to
+		<pre class="tab-pane fade" id="publish_with_reply-ts"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/ts-nats-examples/blob/master/src/publisher_samples.ts#L41-64"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-javascript">// set up a subscription to process the request
+await nc.subscribe(&#39;time&#39;, (err, msg) =&gt; {
+    if (err) {
+        // this example is running inside of a promise
+        reject();
+        return;
+    }
+    if (msg.reply) {
+        nc.publish(msg.reply, new Date().toLocaleTimeString());
+    }
+});
+
+// create a subscription subject that the responding send replies to
 let inbox = createInbox();
 await nc.subscribe(inbox, (err, msg) =&gt; {
     t.log(&#39;the time is&#39;, msg.data);
     // this example is running inside of a promise
     nc.close();
     resolve();
-});
+}, {max: 1});
 
 nc.publish(&#39;time&#39;, &#34;&#34;, inbox);
 </code></pre>
