Updated examples, in particular the go examples with not applicable comments.

--- a/layouts/partials/doc/connection_listener.html
+++ b/layouts/partials/doc/connection_listener.html
@@ -3,9 +3,15 @@
 <ul class="nav nav-tabs">
   	
 		
-		<li class="active api-lang" data-language="java">
-			<a data-toggle="tab" href="#connection_listener-java">Java</a>
+		<li class="active api-lang" data-language="go">
+			<a data-toggle="tab" href="#connection_listener-go">Go</a>
 	  	</li>
+		
+	
+		
+		<li class="api-lang" data-language="java">
+		  <a data-toggle="tab" href="#connection_listener-java">Java</a>
+		</li>
 		
 	
 		
@@ -18,7 +24,18 @@
 <div class="tab-content">
 	
 		
-		<pre class="tab-pane fade in active" id="connection_listener-java"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/SetConnectionListener.java#L8-33"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">class MyConnectionListener implements ConnectionListener {
+		<pre class="tab-pane fade in active" id="connection_listener-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/notapplicable.txt#L5-13"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">There is not a single listener for connection events in the NATS GO Client.
+Instead, you can set individual event handlers using
+- DisconnectHandler(cb ConnHandler)
+- ReconnectHandler(cb ConnHandler)
+- ClosedHandler(cb ConnHandler)
+- DiscoveredServersHandler(cb ConnHandler)
+- ErrorHandler(cb ErrHandler)
+</code></pre>
+		
+	
+		
+		<pre class="tab-pane fade" id="connection_listener-java"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/java-nats-examples/blob/master/src/main/java/io/nats/examples/SetConnectionListener.java#L8-33"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-java">class MyConnectionListener implements ConnectionListener {
     public void connectionEvent(Connection natsConnection, Events event) {
         System.out.println(&#34;Connection event - &#34;&#43;event);
     }
