--- a/layouts/partials/doc/control_2k.html
+++ b/layouts/partials/doc/control_2k.html
@@ -18,7 +18,7 @@
 <div class="tab-content">
 	
 		
-		<pre class="tab-pane fade in active" id="control_2k-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/notapplicable.txt#L1-3"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">This does not apply to the NATS GO Client
+		<pre class="tab-pane fade in active" id="control_2k-go"><a class="toolbar-icons pull-right" target="_blank" href="https://github.com/nats-io/go-nats-examples/blob/master/api-examples/notapplicable.txt#L1-3"><i class="icon icon-github js-tooltip" title="View on GitHub"></i></a><a class="toolbar-icons pull-right"><i class="icon icon-copy js-copy js-tooltip" title="Copy to Clipboard"></i></a><code class="language-go">// This does not apply to the NATS Go Client
 </code></pre>
 		
 	
